# snowflake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  readme.md
core/: CMakeLists.txt  engine_core.cc  engine_core.h  engine_defs.h
core/algorithms/: octree.cc  octree.h  sort.cc  sort.h
core/common/: additional_types.h  common.cmake  hashed_string.cc  hashed_string.h  message_handler_interface.h  messaging_system.cc  messaging_system.h  object_controller_interface.h  rtti.cc  rtti.h  shared_pointer.h  shared_pointer.inl  string_pool.cc  string_pool.h  string_util.cc  string_util.h  time_helper.h  time_helper.inl  unique_ptr.cc  unique_ptr.h
core/graphics/common/: camera.cc  camera.h  frame_time.cc  frame_time.h  graphics_common.cmake  mesh_object.cc  mesh_object.h  object_interface.h  scene.cc  scene.h
core/graphics/debug_overlays/: debug_menu.cc  debug_menu.h  debug_shapes.cc  debug_shapes.h  graphics_debug_overlays.cmake
core/input/: input.cmake  input_controller.cc  input_controller.h  mouse_controller.cc  mouse_controller.h
core/maths/: Math.h  Quaternion.h  Triangle.h  Vector2.h  Vector3.h  affine_transform.cc  affine_transform.h  axis_aligned_bounding_box.h  bounding_box.cc  bounding_box.h  math.cc  math_util_funcs.cc  math_util_funcs.h  maths.cmake  matrix_4x4.cc  matrix_4x4.h  quaternion.cc  ray_intersection.cc  ray_intersection.h  triangle.cc  vector2.cc  vector3.cc  vector4.cc  vector4.h
core/networking/: Client.h  Server.h  client.cc  network_manager.cc  network_manager.h  network_player.cc  network_player.h  server.cc
core/physics/: physics_system.cc  physics_system.h
sandbox/: CMakeLists.txt
sandbox/CUDA/: CMakeLists.txt
sandbox/ML/: scratchpad.ipynb
sandbox/experiments/: CMakeLists.txt
sandbox/experiments/PythonModulesWithSwig/: CMakeLists.txt  module_test.ipynb  python_module.i  python_module_using_swig.h
sandbox/experiments/WriteToNetworkPort/: CMakeLists.txt
sandbox/leetcode/: CMakeLists.txt  leet_code_main.cc  sorted_square_array.h
source/core/: CMakeLists.txt
source/core/asset_loading/: CMakeLists.txt  obj_loader.cc  obj_loader.h
source/core/common/: CMakeLists.txt  additional_types.h  core.h  core_objects.h  defs.h  dequeue.h  doubly_linked_list.h  doubly_linked_list.inl  hashed_string.h  heap_container.h  heap_container.inl  linked_list.h  linked_list.inl  maths_util.h  message_handler_interface.h  messaging_system.h  perf_stats.cc  perf_stats.h  queue.h  queue.inl  rtti.h  shared_pointer.cc  shared_pointer.h  sort.cc  sort.h  stack.h  stack.inl  string_pool.h  string_util.h  time_helper.h  to_str.h  to_str.inl  tree.h  tree.inl  unique_ptr.cc  unique_ptr.h  util.cc  util.h
source/core/cpu_renderer/: CMakeLists.txt  rasterizer.cc  rasterizer.h
source/core/gpu/: CMakeLists.txt  gpu_device.cc  gpu_device.h  gpu_device_resource.h  gpu_factory.cc  gpu_factory.h
source/core/graphics/: CMakeLists.txt  barycentric_interpolation.h  camera.cc  camera.h  color.cc  color.h  debug_menu.h  debug_shapes.h  frame_time.h  graphics_common.h  image_2d.cc  image_2d.h  image_generator.cc  image_generator.h  mesh_object.cc  mesh_object.h  object_interface.h  octree.cc  octree.h  pixel.h  render_context.h  render_primitives.h  render_stats.h  scene.h  text_overlay.cc  text_overlay.h  texture.h  viewport.h
source/core/graphics_asset_adapter/: CMakeLists.txt  obj_mesh_adapter.cc  obj_mesh_adapter.h
source/core/graphics_common/: CMakeLists.txt  color.h  graphics_common.cc  graphics_common.h  mesh_data.h  render_primitives.h
source/core/maths/: CMakeLists.txt  affine_transform.h  axis_aligned_bounding_box.h  bounding_box.h  engine_math.h  geometry.h  geometry_primitives.h  line_segment.h  math.cc  math.h  matrix_4x4.cc  matrix_4x4.h  plane.h  point.h  primitive.h  quaternion.cc  quaternion.h  ray_intersection.cc  ray_intersection.h  sphere.h  triangle.cc  triangle.h  utils.h  vector2.cc  vector2.h  vector3.cc  vector3.h  vector4.h
source/engine/: CMakeLists.txt  engine_core.cc  engine_core.h  engine_defs.h  engine_includes.h
source/engine/algorithms/: algorithms.cmake  octree.cc  octree.h  sort.cc  sort.h
source/engine/common/: CMakeLists.txt  HeapContainer.h  HeapContainer.inl  additional_types.h  common.cmake  core.h  core_objects.h  defs.h  doubly_linked_list.h  doubly_linked_list.inl  hashed_string.cc  hashed_string.h  heap.h  heap.inl  heap_container.h  linked_list.h  linked_list.inl  maths_util.h  message_handler_interface.h  messaging_system.cc  messaging_system.h  object_controller_interface.h  octree.cc  octree.h  perf_stats.cc  perf_stats.h  queue.h  queue.inl  rtti.cc  rtti.h  shared_pointer.cc  shared_pointer.h  sort.cc  sort.h  stack.h  stack.inl  string_pool.cc  string_pool.h  string_util.cc  string_util.h  (+11 more)
source/engine/cpu_renderer/: CMakeLists.txt  raster_primitives.h  rasterizer.cc  rasterizer.h
source/engine/gpu/: CMakeLists.txt  gpu_cmd_list.h  gpu_device.cc  gpu_device.h  gpu_device_resource.cc  gpu_device_resource.h  gpu_factory.cc  gpu_factory.h  gpu_pipeline.h  gpu_queue.h  gpu_resource.h
source/engine/graphics/: CMakeLists.txt  camera.h  color.cc  color.h  debug_shapes.cc  frame_buffer.h  frame_time.cc  graphics.cmake  graphics_debug_overlays.cmake  image_2d.cc  image_2d.h  pixel.h  ppm_image.cc  ppm_image.h  raster_primitives.h  rasterizer.cc  rasterizer.h  render_context.h  render_stats.h  scene.h  text_overlay.cc  text_overlay.h  viewport.h
source/engine/image/: CMakeLists.txt  image.cc  image.h  load_jpeg.cc  load_png.cc  load_ppm.cc
source/engine/input/: input.cmake  input_controller.cc  input_controller.h  input_defs.h  mouse_controller.cc  mouse_controller.h
source/engine/maths/: CMakeLists.txt  Point_2D.h  affine_transform.cc  affine_transform.h  axis_aligned_bounding_box.h  bounding_box.cc  bounding_box.h  engine_math.cc  engine_math.h  geometry.h  geometry_primitives.h  line_segment.h  math.h  math_util_funcs.cc  math_util_funcs.h  maths.cmake  matrix_4x4.cc  matrix_4x4.h  plane.cc  plane.h  point.h  primitive.h  quaternion.cc  sphere.cc  (+13 more)
source/sandbox/: CMakeLists.txt
(+189 files in other folders)
